// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "160",
          "550",
          "827",
          "918",
        ],
        "serial": Array [
          "321",
          "322",
          "323",
          "324",
          "325",
        ],
      },
      Object {
        "others": Array [
          "619",
          "750",
          "594",
          "103",
        ],
        "serial": Array [
          "237",
          "238",
          "239",
          "240",
          "241",
        ],
      },
      Object {
        "others": Array [
          "136",
          "660",
          "812",
          "842",
        ],
        "serial": Array [
          "494",
          "495",
          "496",
          "497",
          "498",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchCrosswordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "crossword": Array [
          Array [
            "E",
            null,
            null,
            null,
            null,
          ],
          Array [
            "A",
            null,
            null,
            null,
            null,
          ],
          Array [
            "T",
            "I",
            "G",
            "E",
            "R",
          ],
          Array [
            null,
            null,
            null,
            null,
            "A",
          ],
          Array [
            null,
            null,
            null,
            null,
            "T",
          ],
        ],
        "start": Array [
          Array [
            "image",
            Array [
              0,
              0,
            ],
            "down",
          ],
          Array [
            "image",
            Array [
              2,
              0,
            ],
            "lToR",
          ],
          Array [
            "image",
            Array [
              2,
              4,
            ],
            "down",
          ],
        ],
      },
      Object {
        "crossword": Array [
          Array [
            "E",
            null,
            null,
            null,
            null,
          ],
          Array [
            "A",
            null,
            null,
            null,
            null,
          ],
          Array [
            "T",
            "I",
            "G",
            "E",
            "R",
          ],
          Array [
            null,
            null,
            null,
            null,
            "A",
          ],
          Array [
            null,
            null,
            null,
            null,
            "T",
          ],
        ],
        "start": Array [
          Array [
            "image",
            Array [
              0,
              0,
            ],
            "down",
          ],
          Array [
            "image",
            Array [
              2,
              0,
            ],
            "lToR",
          ],
          Array [
            "image",
            Array [
              2,
              4,
            ],
            "down",
          ],
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchEquationData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 10,
        "firstNum": 8,
        "op": "+",
        "secondNum": 2,
      },
      Object {
        "answer": 9,
        "firstNum": 5,
        "op": "+",
        "secondNum": 4,
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        Array [
          "y",
          "y",
        ],
        Array [
          "T",
          "T",
        ],
        Array [
          "c",
          "c",
        ],
        Array [
          "v",
          "v",
        ],
      ],
      Array [
        Array [
          "Q",
          "Q",
        ],
        Array [
          "G",
          "G",
        ],
        Array [
          "T",
          "T",
        ],
        Array [
          "X",
          "X",
        ],
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 2,
        "choices": Array [
          "C",
          "T",
          "G",
          "X",
        ],
        "question": "G",
      },
      Object {
        "answerIndex": 0,
        "choices": Array [
          "W",
          "Q",
          "Y",
          "J",
        ],
        "question": "W",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchRollingData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
        "choices": Array [
          Array [
            "X",
            "Y",
            "Z",
            "A",
            "B",
            "C",
            "D",
          ],
          Array [
            "M",
            "N",
            "O",
            "P",
            "Q",
            "R",
            "S",
          ],
          Array [
            "M",
            "N",
            "O",
            "P",
            "Q",
            "R",
            "S",
          ],
          Array [
            "I",
            "J",
            "K",
            "L",
            "M",
            "N",
            "O",
          ],
          Array [
            "B",
            "C",
            "D",
            "E",
            "F",
            "G",
            "H",
          ],
        ],
        "question": "Fruit",
      },
      Object {
        "answer": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
        "choices": Array [
          Array [
            "X",
            "Y",
            "Z",
            "A",
            "B",
            "C",
            "D",
          ],
          Array [
            "M",
            "N",
            "O",
            "P",
            "Q",
            "R",
            "S",
          ],
          Array [
            "M",
            "N",
            "O",
            "P",
            "Q",
            "R",
            "S",
          ],
          Array [
            "I",
            "J",
            "K",
            "L",
            "M",
            "N",
            "O",
          ],
          Array [
            "B",
            "C",
            "D",
            "E",
            "F",
            "G",
            "H",
          ],
        ],
        "question": "Fruit",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 152,
        "serial": Array [
          "147",
          "148",
          "149",
          "150",
          "151",
          "152",
          "153",
          "154",
        ],
      },
      Object {
        "answer": 591,
        "serial": Array [
          "585",
          "586",
          "587",
          "588",
          "589",
          "590",
          "591",
          "592",
        ],
      },
      Object {
        "answer": 778,
        "serial": Array [
          "770",
          "771",
          "772",
          "773",
          "774",
          "775",
          "776",
          "777",
          "778",
          "779",
          "780",
          "781",
          "782",
          "783",
          "784",
          "785",
        ],
      },
      Object {
        "answer": 355,
        "serial": Array [
          "352",
          "353",
          "354",
          "355",
          "356",
          "357",
          "358",
          "359",
          "360",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchTrueOrFalseData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": "Fruit",
        "question": "Apple is a:",
        "wrongChoice": "Animal",
      },
      Object {
        "answer": "Fruit",
        "question": "Apple is a:",
        "wrongChoice": "Animal",
      },
      Object {
        "answer": "Fruit",
        "question": "Apple is a:",
        "wrongChoice": "Animal",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "M",
          "H",
          "T",
          "S",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "S",
          "J",
          "W",
          "K",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "T",
          "V",
          "T",
          "I",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
